# Aruco_as_position_reference_for_UAV

./: README.md
Aruco_Parcel_Marker/: CameraCalibration.yml
Aruco_Parcel_Marker/Main/: Main.cpp  Main_OLD.cpp
Aruco_pose_publisher/: CMakeLists.txt
Aruco_pose_publisher/src/: aruco_pose_publisher.cpp  aruco_pose_publisher_COMPLETE.cpp  aruco_pose_publisher_OLD.cpp
